fixed terrain gaps, adjusting slider & toggle

--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,9 @@ canvas.webGL {
 
 #music-toggle-button {
   position: absolute;
-  top: 1%;
-  right: 0.6%;
-  padding: 0.5% 1%;
+  bottom: 1%;
+  right: calc(0.2% + 5px);
+  padding: 10px 20px;
   background: rgba(32, 32, 32, 0.5);
   cursor: pointer;
   color: rgb(220, 220, 220);
@@ -31,26 +31,22 @@ canvas.webGL {
 #music-toggle-button:hover {
   background: rgba(255, 255, 255, 0.15);
   color: rgb(220, 220, 220);
-  outline: 1px solid#26ead7;
+  outline: 1px solid #960016;
 }
 
 #volume-slider {
   position: absolute;
-  top: 2%;
-  right: 4%;
-  width: 150px;
+  bottom: calc(13% + 10px);
+  right: 35px;
+  transform: translateX(50%) rotate(270deg);
   cursor: pointer;
   background: none;
   border: none;
 }
 
-#volume-slider::-webkit-slider-runnable-track {
-  background-color: rgba(32, 32, 32, 0.5);
-  height: 4px;
-}
-
+#volume-slider::-webkit-slider-runnable-track,
 #volume-slider::-moz-range-track {
-  background-color: rgba(32, 32, 32, 0.5);
+  background-color: rgb(220, 220, 220);
   height: 4px;
 }
 
@@ -59,34 +55,15 @@ canvas.webGL {
   appearance: none;
   width: 16px;
   height: 16px;
-  background-color: rgb(220,220,220);
-  border: 1px solid rgb(220,220,220);
+  background-color: #960016;
+  border: 1px solid rgb(220, 220, 220);
   border-radius: 50%;
   cursor: pointer;
 }
 
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  #volume-slider {
-    top: 2.5%;
-    background-color: rgb(32, 32, 32);
-    height: 4px;
-  }
-}
-
 @media screen and (max-width: 1200px) {
   #music-toggle-button {
-    right: 2.5%;
-    padding: 10px 20px;
-  }
-
-  #volume-slider {
-    position: absolute;
-    top: 2.5%;
-    left: 2.5%;
-    transform: translateX(-2.5%);
-    cursor: pointer;
-    background: none;
-    border: none;
+    right: calc(1% + 5px);
   }
 }
 
